2006-11-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-05
	* fix bug regarding the FRL_LAST_SEGM flag not being set
	  appropriately in rare cases, spotted by Emilio
	* To distribute all valid feds among all superfragments, allow for
	  two different numbers of feds per superfragment. See
	  initFedBuffers(nFed), which is looking at (and possibly
	  changing!) nSuperFrag_ to distribute all FED Ids into
	  superfragments.

2006-11-03  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-04
	* add monitor parameters monitored by the 'real' BU
	* in "RANDOM" mode, only generate 'valid' FED IDs
	(DataFormats/FEDRawData/FEDNumbering); equaly distribute all valid
	FED IDs over superfragments. Don't use FED IDs which are 'left'
	due to the fact that nFEDs%nSF!=0.
	

2006-10-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-03
	* use new methods of Utilities/WebGUI V00-11-03 concerning the
	addition of ItemListener callbacks

2006-10-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-02
	* turn nbMBPerSec_ from xdata::UnsignedInteger32 into a
	  xdata::Double

2006-10-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-01
	* fix memory leak: in playback mode, evf::BU must assume ownership
          of the FEDRawDataCollection received from the
	  PlaybackRawDataProvider and properly clean it up, which it now does.

2006-10-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00
	* introduce namespace evf::
	* evf::BU is now a statemachine
	  (Configure - Enable - Halt, Suspend - Resume,
	  see EventFilter/Utilities/EPStateMachine)
	* evf::BU contains a WebGUI (see EventFilter/Utilities) to take
          care of managing exported parameters and displaying them on
	  HyperDAQ webpages
	* evf::BU measures the number of events and number of MB per
	  second sent
	* evf::BU listens to the *change* of the 'mode' parameter and